<resources>
    <string name="app_name">DjangoTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="Settings">Settings</string>
    <string name="LoginPage">Login Page</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="Attempt">Attempt</string>
    <string name="Login">Login</string>
    <string name="DjangoName">Name</string>
    <string name="DjangoSurname">Surname</string>
    <string name="update">Update</string>
    <string name="screen_page_text">Welcome  to the second page</string>
</resources>
