<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_report"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_attempt_count"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/Button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/textView_attempt" />

    <TextView
        android:id="@+id/textView_attempt"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Attempt"
        app:layout_constraintBottom_toTopOf="@+id/Button_login"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView_attempt_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_password" />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="username"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/textView_username" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Username"
        app:layout_constraintBottom_toTopOf="@+id/textView_password"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/textView_attempt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_loginpage"
        android:layout_width="110dp"
        android:layout_height="53dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="88dp"
        android:text="@string/LoginPage"
        app:layout_constraintBottom_toTopOf="@+id/textView_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_login"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/textView_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>