<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <EditText
        android:id="@+id/editText_DjangoSurname"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toEndOf="@+id/textView_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_DjangoName" />

    <EditText
        android:id="@+id/editText_DjangoName"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="username"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_username"
        app:layout_constraintTop_toBottomOf="@+id/textView_CurrentUsername" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/DjangoName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CurrentUsername" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/DjangoSurname"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_username" />

    <TextView
        android:id="@+id/textView_CurrentUsername"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ErrorLog"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update"
        app:layout_constraintVertical_bias="0.344" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_DjangoSurname" />
</androidx.constraintlayout.widget.ConstraintLayout>